--- a/view/contract_line_list_sequence.xml
+++ b/view/contract_line_list_sequence.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Contract Line">
+<tree string="Contract Line" sequence="sequence">
     <field name="contract"/>
     <field name="service"/>
     <field name="unit_price"/>
     <field name="start_date"/>
     <field name="end_date"/>
-    <field name="contract_state"/>
     <field name="last_consumption_date"/>
     <field name="last_consumption_invoice_date"/>
 </tree>
