Remove string attribute from views issue2350

--- a/view/contract_line_list_sequence.xml
+++ b/view/contract_line_list_sequence.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<tree string="Contract Line" sequence="sequence">
+<tree sequence="sequence">
     <field name="contract"/>
     <field name="service"/>
     <field name="unit_price"/>
